# rustbtc

./: Cargo.toml  README.md
lib/: Cargo.toml  block.cbor  tx.cbor
lib/src/: crypto.rs  error.rs  lib.rs  network.rs  sha256.rs  types.rs  util.rs
lib/src/types/: block.rs  blockchain.rs  transaction.rs
miner/src/: main.rs
src/: main
